Add opencv image window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,15 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(MAJOR_PLANES_DETECTOR)
 
+set (OpenCV_DIR C:/libs/opencv/build)
 find_package(PCL 1.2 REQUIRED COMPONENTS)
+find_package( OpenCV 4.1.2 REQUIRED )
 include_directories(${PCL_INCLUDE_DIRS}
-                    ${CMAKE_SOURCE_DIR})
+                    ${CMAKE_SOURCE_DIR}
+					${OpenCV_INCLUDE_DIRS})
+message(PCL_LIBRARY_DIRS:  ${PCL_LIBRARY_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
+
 add_definitions(${PCL_DEFINITIONS})
 add_library(helper_lib helper.cpp helper.h)
 add_executable(pcl_detect_planes
@@ -12,11 +17,11 @@ add_executable(pcl_detect_planes
 add_executable(pcl_playback
                pcl_playback.cpp )
 			   
+message(${PCL_LIBRARIES})
+message(${OpenCV_LIBS})
 target_link_libraries(pcl_detect_planes ${PCL_LIBRARIES} helper_lib)
-target_link_libraries(pcl_playback ${PCL_LIBRARIES} helper_lib)
-set_property(TARGET pcl_playback PROPERTY CXX_STANDARD 17)
-set_property(TARGET pcl_playback PROPERTY CXX_STANDARD_REQUIRED ON)
-set (OpenCV_DIR C:/libs/opencv/x64/vc14/staticlib)
+target_link_libraries(pcl_playback ${PCL_LIBRARIES} ${OpenCV_LIBS} helper_lib)
+#target_link_libraries(pcl_playback ${PCL_LIBRARIES} helper_lib)
 
 ################################
 # GTest
